Adding swagger header description
