# routes/router.go
@@ -13,16 +13,6 @@ type Server struct {
 	Router *mux.Router
 }
 
-// @title NextJob API
-// @version 1.0
-// @description This is a sample serice for managing orders
-// @termsOfService http://swagger.io/terms/
-// @contact.name API Support
-// @contact.email dev.meireles@gmail.com
-// @license.name Apache 2.0
-// @license.url http://www.apache.org/licenses/LICENSE-2.0.html
-// @host localhost:3333
-// @BasePath /
 func (server *Server) SetupRoutes() *mux.Router {
 	r := mux.NewRouter()
 
